Replaced font-awesome DNA icon with lung icon

--- a/scrna.html
+++ b/scrna.html
@@ -179,7 +179,7 @@
     <header>
         <div class="header-container">
             <a href="index.html" class="logo">
-                <i class="fas fa-dna"></i>
+                <i class="fa-solid fa-lungs"></i>
                 <span>Lung TFDB</span>
             </a>
             
